--- a/src/containers/SwapOfferConfirmation/SwapOfferConfirmation.scss
+++ b/src/containers/SwapOfferConfirmation/SwapOfferConfirmation.scss
@@ -26,13 +26,18 @@
     margin: 0 auto;
     border-top: 1px solid #bababa;
     text-align: center;
-    margin-top: 30px;
-    padding-top: 30px;
+    margin-top: 50px;
+    padding-top: 50px;
 
     p:nth-child(1) {
       width: 280px;
       text-align: left;
-      margin: 0 auto 1rem auto;
+      margin: 0 auto;
+    }
+
+    ul {
+      list-style-position: inside;
+      padding-left: 0;
     }
   }
 
@@ -41,10 +46,6 @@
     padding-top: 40px;
     min-height: 210px;
     border-radius: 0 0 7px 7px;
-  }
-
-  &_footnote {
-    font-size: $font-size-sm;
   }
 
   &_errorMessage {
