--- a/src/containers/Waiting/Waiting.scss
+++ b/src/containers/Waiting/Waiting.scss
@@ -8,7 +8,7 @@
   }
 
   &_status {
-    margin: 40px;
+    margin: 30px 30px 80px 30px;
     font-size: $h4-font-size;
   }
 }
